8.3.6 (#77)
* :recycle: update GraalVM native image detection and logging configuration

* :recycle: update GraalVM native image detection and logging configuration

* :recycle: update MIT license formatting in multiple files

* :recycle: remove unused FreeMarker templates for code generation

* :recycle: fix formatting and remove unused module export

* :recycle: update module dependencies and Maven plugin configurations

* :recycle: add systemd support for session information and update release workflow

* :recycle: update reflect-config and resource-config for native image

* :boom: 8.3.6